k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-postgres-db-2
  namespace: fake-user-app
spec:
  selector:
    app: my-postgres-db-2
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-postgres-db-2
  namespace: fake-user-app
spec:
  serviceName: my-postgres-db-2
  replicas: 1
  selector:
    matchLabels:
      app: my-postgres-db-2
  template:
    metadata:
      labels:
        app: my-postgres-db-2
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d fake_user_app"]
            initialDelaySeconds: 5
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
